# rhombic_strips

./: .gitignore  Cargo.toml  README.md  all_graphs  build.sh  cube2d  cube3d  cube4d  distributed.py  fence_distributed_10  fence_distributed_13  fence_distributed_17  fence_distributed_5  fence_distributed_8  fence_distributed_9  graphs_5  graphs_6  int_partitions.py  int_partitions_5  int_partitions_6  int_partitions_7  int_partitions_ref_10  int_partitions_ref_12  int_partitions_ref_4  int_partitions_ref_6  int_partitions_ref_7  int_partitions_ref_8  no_rhombic_6  ref_int_partitions.py  scripts_panel.patch  strip_visualization.tex  test_graphs  trees_10  trees_4  trees_5  trees_6  trees_7  trees_8  trees_9
cluster/: relay.py  serve.sh
lattices/: associahedron.py  associahedron_5  associahedron_6  associahedron_7  associahedron_8  boolean_222  boolean_3  boolean_4  boolean_5  boolean_6  boolean_7  cube4d  distributed.py  fence_distributed_10  fence_distributed_11  fence_distributed_12  fence_distributed_13  fence_distributed_14  fence_distributed_15  fence_distributed_16  fence_distributed_6  fence_distributed_7  fence_distributed_8  gen_boolean.py  gen_trees.py  grid_222  grid_223  grid_224  int_partitions_4  int_partitions_ref_11  int_partitions_ref_13  int_partitions_ref_14  int_partitions_ref_15  int_partitions_ref_9  normal_associahedron_5  normal_associahedron_6  normal_associahedron_7  normal_permutahedron_4  normal_permutahedron_5  permutahedron.py  (+7 more)
src/: generators.rs  gui.rs  lattice.rs  lib.rs  main.rs  parallel_seeds.rs  plotting.rs  rhombic.rs  scripts.rs  (+1 more)
(+7 files in other folders)
