[package]
name = "rhombic_strips"
version = "0.1.0"
edition = "2021"

[lib]
name = "rhombic_strips"
crate-type = ["cdylib", "rlib"]

[features]
# The desktop egui explorer. On by default; the headless cluster/relay build
# uses `--no-default-features` so login nodes never compile egui/eframe.
default = ["gui"]
gui = ["dep:egui", "dep:eframe"]

[[bin]]
name = "rhombic_strips"
path = "src/main.rs"
required-features = ["gui"]

[[bin]]
name = "strip_stream"
path = "src/bin/strip_stream.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
itertools = "0.13.0"
colored = "2.0.4"
egui = { version = "0.33.3", optional = true }
eframe = { version = "0.33.3", optional = true }
wasm-bindgen = "0.2"
js-sys = "0.3"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rayon = "1.8"
